--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ import { NAV_LINKS, SITE } from '@/consts'
 
 <header>
   <div
-    class="border-accent mx-auto flex max-w-3xl items-center justify-between gap-4 border-b px-4 py-3"
+    class="border-b border-accent mx-auto flex max-w-full items-center justify-between gap-4 px-4 py-3"
   >
     <!-- SITE HEADER LOGO AND NAME  -->
     <Link href="/" class="flex shrink-0 items-center justify-center gap-3">
