--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -23,7 +23,7 @@ const subpostCount = !isSubpost(entry.id) ? await getSubpostCount(entry.id) : 0
 ---
 
 <div
-  class="hover:bg-secondary/50 border-accent border-b px-0 py-4 transition-colors duration-300 ease-in-out"
+  class="hover:bg-secondary/50 border-accent border rounded-xl px-4 py-4 transition-colors duration-300 ease-in-out"
 >
   <Link
     href={`/${entry.collection}/${entry.id}`}
