--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,9 +7,9 @@ const txt_copyright = 'Bokumentation.'
 const txt_siteTemplate = 'Site template by enscribe'
 ---
 
-<footer class="py-4">
+<footer class="mt-4 border-t border-accent py-2">
   <div
-    class="mx-auto flex max-w-3xl flex-col items-center justify-center gap-y-2 px-4 sm:flex-row sm:justify-between"
+    class="mx-auto flex max-w-full flex-col items-center justify-center gap-y-2 px-4 sm:flex-row sm:justify-between"
   >
     <div class="flex flex-wrap items-center justify-center gap-x-2 text-center">
       <span class="text-muted-foreground text-sm">
