--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -14,7 +14,7 @@ const { project } = Astro.props
 ---
 
 <div
-  class="hover:bg-secondary/50 border-accent border-b px-0 py-4 transition-colors duration-300 ease-in-out"
+  class="hover:bg-secondary/50 rounded-xl border-accent border px-4 py-4 transition-colors duration-300 ease-in-out"
 >
   <Link
     href={project.data.link}
