--- a/src/components/TOCSidebar.astro
+++ b/src/components/TOCSidebar.astro
@@ -14,11 +14,13 @@ const isCurrentSubpost = isSubpost(currentPostId)
 const parentId = isCurrentSubpost ? getParentId(currentPostId) : currentPostId
 ---
 
+<!-- sticky top-20 col-start-1 row-span-1 mr-8 ml-auto hidden h-[calc(100vh-5rem)] max-w-md xl:block -->
+
 {
   sections.length > 0 && (
     <div
       id="toc-sidebar-container"
-      class="sticky top-20 col-start-1 row-span-1 mr-8 ml-auto hidden h-[calc(100vh-5rem)] max-w-md xl:block"
+      class="hidden xl:block"
     >
       <ScrollArea
         client:load
