--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,18 +23,17 @@ const { class: className } = Astro.props
 
   <body>
     <div class="flex h-fit min-h-screen flex-col gap-y-0 font-sans">
-      <!-- This is make the Header Sticky -->
-      <!-- Original -> bg-background/50 sticky top-0 z-50 divide-y backdrop-blur-sm xl:divide-none -->
+      <!-- Top Bar Header -->
       <div>
         <Header />
-
-        <!-- TOC or Table of Content -->
-        <!-- <slot name="subposts-navigation" /> -->
       </div>
-
+      
       <div
-        class="bg-background/50 sticky top-0 z-50 divide-y backdrop-blur-sm xl:divide-none"
+      class="bg-background/50 sticky top-0 z-50 divide-y backdrop-blur-sm xl:divide-none"
       >
+        <!-- SUBPOST NAVIGATION -->
+        <slot name="subposts-navigation" />
+        <!-- TOC FOR MOBILE NOW ARE STICKY -->
         <slot name="table-of-contents" />
       </div>
 
