--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
 
 <Layout class="max-w-3xl">
   <PageHead slot="head" title="Home" />
-  <section class="flex flex-col items-center space-y-1 text-center">
+  <section class="mt-4 flex flex-col items-center space-y-1 text-center">
     <h2 class="text-2xl leading-none font-medium">Hai there👋</h2>
     <h3 class="text-muted-foreground text-xl">Welcome to the Bokumentation!</h3>
     <p class="text-muted-foreground mt-4 text-sm">
@@ -32,7 +32,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
 
   <section class="flex flex-col gap-y-4">
     <div
-      class="border-accent flex items-center justify-between border-t border-b py-4"
+      class="flex items-center justify-between py-2"
     >
       <h2 class="text-sm font-medium">Latest posts</h2>
       <a class="text-sm font-medium" href="/blog">
