--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,19 +68,20 @@
 }
 
 [data-theme='dark'] {
-  --background: #0a0a0a;
+  --background: #0d1117;
   --foreground: oklch(0.985 0 0);
   --primary: oklch(0.922 0 0);
   --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.269 0 0);
+  --secondary: #212830;
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
+  --muted-foreground: #808790;
+  --accent: #26292f;
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
   --ring: oklch(0.556 0 0);
+  /* #808790  border: #2f353d */
 }
 
 @layer base {
