--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ const txt_copyright = 'Bokumentation.'
 const txt_siteTemplate = 'Site template by enscribe'
 ---
 
-<footer class="mt-4 border-t border-accent py-2">
+<footer class="mt-4 lg:border-t border-accent py-4">
   <div
     class="mx-auto flex max-w-full flex-col items-center justify-center gap-y-2 px-4 sm:flex-row sm:justify-between"
   >
