--- a/src/components/SubpostsSidebar.astro
+++ b/src/components/SubpostsSidebar.astro
@@ -51,7 +51,7 @@ const subpostsWithReadingTime = await Promise.all(
     className="flex max-h-[calc(100vh-8rem)] flex-col overflow-y-auto"
     data-subposts-sidebar-scroll
   >
-    <div class="px-4">
+    <div class="mb-4 px-2">
       <ul class="space-y-1">
         {
           activePost && (
