--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -44,27 +44,14 @@ const authors = await getAllAuthors()
   </div>
 
   <section>
-    <div class="min-w-full">
+    <div class="min-w-full border border-accent p-4 rounded-xl">
       <h2 class="mb-4 text-2xl font-medium">Publication</h2>
-      <div class="mb-4" id="univ-1">
+      <div class="flex flex-col gap-2" id="univ-1">
         <div class="flex flex-row justify-between">
-          <h1>Telkom University</h1>
+          <h1>To-do-list</h1>
           <p>2024-2025</p>
         </div>
-        <div class="text-muted-foreground mt-2 flex flex-col">
-          <p>Bulet bulet</p>
-          <p>Bulet bulet</p>
-          <p>Bulet bulet</p>
-          <p>Bulet bulet</p>
-        </div>
-      </div>
-
-      <div class="mb-4" id="univ-2">
-        <div class="flex flex-row justify-between">
-          <h1>Sebelas Maret University</h1>
-          <p>2024-2025</p>
-        </div>
-        <div class="text-muted-foreground mt-2 flex flex-col">
+        <div class="text-muted-foreground flex flex-col">
           <p>Bulet bulet</p>
           <p>Bulet bulet</p>
           <p>Bulet bulet</p>
@@ -75,31 +62,43 @@ const authors = await getAllAuthors()
   </section>
 
   <section>
-    <div class="min-w-full">
+    <div class="min-w-full border border-accent p-4 rounded-xl">
       <h2 class="mb-4 text-2xl font-medium">Education Background</h2>
       <div class="mb-4" id="univ-1">
-        <div class="flex flex-row justify-between">
-          <h1>Telkom University</h1>
-          <p>2024-2025</p>
+          <div class="flex flex-row justify-between">
+          <div class="gap-4 flex flex-row w-full">
+            <img class="border size-12" src="/src/assets/img/LOGO_TELU.png" alt="Universitas Sebelas Maret">
+            <div> 
+              <h1 class="">Telkom University</h1>
+              <h2>D3 Technology Computer</h2>
+            </div>
+          </div>
+          <p>2024-2027</p>
         </div>
         <div class="text-muted-foreground mt-2 flex flex-col">
-          <p>Bulet bulet</p>
-          <p>Bulet bulet</p>
-          <p>Bulet bulet</p>
-          <p>Bulet bulet</p>
+          <p>To-do-list</p>
+          <p>To-do-list</p>
+          <p>To-do-list</p>
+          <p>To-do-list</p>
         </div>
       </div>
 
       <div class="mb-4" id="univ-2">
         <div class="flex flex-row justify-between">
-          <h1>Sebelas Maret University</h1>
-          <p>2024-2025</p>
+          <div class="gap-4 flex flex-row w-full">
+            <img class="border size-12" src="/src/assets/img/LOGO_UNS.png" alt="Universitas Sebelas Maret">
+            <div> 
+              <h1 class="">Sebelas Maret University</h1>
+              <h2>Biology Education (unfinished degree / dropout)</h2>
+            </div>
+          </div>
+          <p>2022-2023</p>
         </div>
         <div class="text-muted-foreground mt-2 flex flex-col">
-          <p>Bulet bulet</p>
-          <p>Bulet bulet</p>
-          <p>Bulet bulet</p>
-          <p>Bulet bulet</p>
+          <p>To-do-list</p>
+          <p>To-do-list</p>
+          <p>To-do-list</p>
+          <p>To-do-list</p>
         </div>
       </div>
     </div>
