--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -67,7 +67,7 @@ const authors = await getAllAuthors()
       <div class="mb-4" id="univ-1">
           <div class="flex flex-row justify-between">
           <div class="gap-4 flex flex-row w-full">
-            <img class="border size-12" src="../src/assets/img/logotelu.png" alt="Universitas Sebelas Maret">
+            <img class="border size-12" src="src/assets/img/logotelu.jpg">
             <div> 
               <h1 class="">Telkom University</h1>
               <h2>D3 Technology Computer</h2>
@@ -86,7 +86,7 @@ const authors = await getAllAuthors()
       <div class="mb-4" id="univ-2">
         <div class="flex flex-row justify-between">
           <div class="gap-4 flex flex-row w-full">
-            <img class="border size-12" src="../src/assets/img/logouns.png" alt="Universitas Sebelas Maret">
+            <img class="border size-12" src="src/assets/img/logouns.jpg">
             <div> 
               <h1 class="">Sebelas Maret University</h1>
               <h2>Biology Education (unfinished degree / dropout)</h2>
