--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,7 +19,7 @@ const authors = await getAllAuthors()
   <PageHead slot="head" title="About" />
   <Breadcrumbs items={[{ label: 'About', icon: 'lucide:info' }]} />
 
-  <section>``
+  <section>
     <h1 class="mb-4 text-2xl font-medium">Meet the Author</h1>
     <div class="mb-4">
       {
