--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -39,15 +39,15 @@ const { project } = Astro.props
       <h3 class="mb-1 text-lg font-medium">
         {project.data.name}
       </h3>
-      <p class="text-muted-foreground mb-2 text-sm">
+      <p class="text-foreground/80 mb-2 text-sm">
         {project.data.description}
       </p>
       {
         project.data.startDate && (
-          <p class="text-muted-foreground/70 mb-2 flex items-center gap-x-1.5 text-xs">
+          <p class="text-foreground/80 mb-2 flex items-center gap-x-1.5 text-xs">
             <span class="flex items-center gap-x-1.5">
               <Icon name="lucide:calendar" class="size-3" />
-              <span>
+              <span class="text-muted-foreground">
                 {formatDate(project.data.startDate)}
                 {project.data.endDate
                   ? ` → ${formatDate(project.data.endDate)}`
