--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,10 +13,10 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
 
 <Layout class="max-w-3xl">
   <PageHead slot="head" title="Home" />
-  <section class="mt-4 flex flex-col items-center space-y-1 text-center">
-    <h2 class="text-2xl leading-none font-medium">Hai there👋</h2>
-    <h3 class="text-muted-foreground text-xl">Welcome to the Bokumentation!</h3>
-    <p class="text-muted-foreground mt-4 text-sm">
+  <section class="mt-4 flex flex-col space-y-1 text-left">
+    <h2 class="text-4xl leading-none font-semibold">Hai there👋</h2>
+    <h3 class="text-foreground text-xl">Welcome to the Bokumentation!</h3>
+    <p class="text-foreground mt-4 text-sm">
       From documentation become bokumentation because of ibe. I love doing
       system low level programming and cinematography. What if i combined both?
       And yes i'am still a "Diploma 3 of Computer Engineering" indonesia college
