--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -19,7 +19,7 @@ const authors = await getAllAuthors()
   <div>
     <h2 class="mb-4 text-2xl font-medium">Project lists</h2>
     <div class="prose mb-4">
-      <p class="text-muted-foreground mt-0">Cihuy</p>
+      <p class="text-foreground mt-0">Here are my list of projects</p>
     </div>
   </div>
 
