--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,11 +56,11 @@
   --foreground: oklch(0.145 0 0);
   --primary: oklch(0.205 0 0);
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
+  --secondary: #E5E5E5;
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
+  --accent: #E5E5E5;
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
@@ -68,20 +68,19 @@
 }
 
 [data-theme='dark'] {
-  --background: #0d1117;
-  --foreground: oklch(0.985 0 0);
+  --background: #101010;
+  --foreground: #D4D4D4;
   --primary: oklch(0.922 0 0);
   --primary-foreground: oklch(0.205 0 0);
-  --secondary: #212830;
+  --secondary: #262626;
   --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
-  --muted-foreground: #808790;
-  --accent: #26292f;
+  --muted: #262626;
+  --muted-foreground: #c0c0c0;
+  --accent: #262626;
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
   --ring: oklch(0.556 0 0);
-  /* #808790  border: #2f353d */
 }
 
 @layer base {
