--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const { class: className } = Astro.props
       </div>
       
       <div
-      class="bg-background/50 sticky top-0 z-50 divide-y backdrop-blur-sm xl:divide-none"
+      class="bg-background/50 top-0 z-50 divide-y backdrop-blur-sm xl:divide-none"
       >
         <!-- SUBPOST NAVIGATION -->
         <slot name="subposts-navigation" />
