--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
 
 <Layout class="max-w-3xl">
   <PageHead slot="head" title="Home" />
-  <section class="mt-4 flex flex-col space-y-1 text-left">
+  <section class="mt-6 flex flex-col space-y-1 text-left">
     <h2 class="text-4xl leading-none font-semibold">Hai there👋</h2>
     <h3 class="text-foreground text-xl">Welcome to the Bokumentation!</h3>
     <p class="text-foreground mt-4 text-sm">
@@ -24,21 +24,20 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
     </p>
   </section>
 
-  <div
-    class="mx-auto flex max-w-3xl flex-col items-center justify-center gap-y-2 px-4 sm:flex-row sm:justify-between"
-  >
+  <div class="mt-4 mb-4 flex-col sm:flex-row sm:justify-between">
     <SocialIcons links={SOCIAL_LINKS} />
   </div>
 
   <section class="flex flex-col gap-y-4">
     <div
-      class="flex items-center justify-between py-2"
+      class="text-foreground flex items-center justify-between text-sm"
     >
-      <h2 class="text-sm font-medium">Latest posts</h2>
-      <a class="text-sm font-medium" href="/blog">
+      <h2>Latest posts</h2>
+      <a href="/blog">
         See all blogs <span class="group-hover:translate-x-1">&rarr;</span></a
       >
     </div>
+
     <ul class="flex flex-col gap-y-4">
       {
         blog.map((post) => (
