--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -69,7 +69,7 @@
 
 [data-theme='dark'] {
   --background: #101010;
-  --foreground: #D4D4D4;
+  --foreground: #EDEDED;
   --primary: oklch(0.922 0 0);
   --primary-foreground: oklch(0.205 0 0);
   --secondary: #262626;
