fix Uncaught SyntaxError: Failed to execute 'replaceWith' on 'Element': Identifier 'theme' has already been declared

--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -22,7 +22,7 @@ import { Icon } from 'astro-icon/components'
 </Button>
 
 <script is:inline data-astro-rerun>
-  const theme = (() => {
+  var theme = (() => {
     const localStorageTheme = localStorage?.getItem('theme') ?? ''
     if (['dark', 'light'].includes(localStorageTheme)) {
       return localStorageTheme
