--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -43,7 +43,7 @@ import Favicons from './Favicons.astro'
     href={new URL('rss.xml', Astro.site)}
   />
 
-  <Favicons />
+  <!-- <Favicons /> -->
   <ClientRouter />
 
   <slot />
