--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -1,10 +1,12 @@
-<!-- <link rel="icon" type="image/png" href="/src/assets/img/favicon.png" sizes="96x96" /> -->
-<!-- <link rel="icon" type="image/svg+xml" href="/src/assets/img/favicon.png" sizes="96x96" /> -->
-<!-- <link rel="shortcut icon" href="/src/assets/img/favicon.png" /> -->
-<!-- <link
+<link rel="icon" type="image/png" href="/src/assets/img/favicon.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/src/assets/img/favicon.ico" sizes="96x96" />
+<link rel="shortcut icon" href="/src/assets/img/favicon.ico" />
+
+<link
   rel="apple-touch-icon"
   sizes="180x180"
   href="/src/assets/img/favicon.png"
 />
-<meta name="apple-mobile-web-app-title" content="bokumentation" /> -->
-<!-- <link rel="manifest" href="/site.webmanifest" /> -->
+<meta name="apple-mobile-web-app-title" content="bokumentation" />
+
+<link rel="manifest" href="/site.webmanifest" />
