edit favicon to disable, and astro config

--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -1,6 +1,8 @@
-<link rel="icon" type="image/png" href="/src/assets/img/favicon.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/src/assets/img/favicon.ico" sizes="96x96" />
-<link rel="shortcut icon" href="/src/assets/img/favicon.ico" />
+<!-- <link rel="icon" type="image/png" href="/favicon.png" sizes="96x96" /> -->
+<!-- <link rel="icon" type="image/svg+xml" href="/favicon.ico" sizes="96x96" /> -->
+<!-- <link rel="shortcut icon" href="/src/assets/img/favicon.ico" /> -->
+
+<link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
 <link
   rel="apple-touch-icon"
@@ -9,4 +11,4 @@
 />
 <meta name="apple-mobile-web-app-title" content="bokumentation" />
 
-<link rel="manifest" href="/site.webmanifest" />
+<!-- <link rel="manifest" href="/site.webmanifest" /> -->
