--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -4,11 +4,11 @@
 
 <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
-<link
+<!-- <link
   rel="apple-touch-icon"
   sizes="180x180"
   href="/src/assets/img/favicon.png"
-/>
-<meta name="apple-mobile-web-app-title" content="bokumentation" />
+/> -->
+<!-- <meta name="apple-mobile-web-app-title" content="bokumentation" /> -->
 
 <!-- <link rel="manifest" href="/site.webmanifest" /> -->
