--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -1,14 +1,6 @@
-<!-- <link rel="icon" type="image/png" href="/favicon.png" sizes="96x96" /> -->
-<!-- <link rel="icon" type="image/svg+xml" href="/favicon.ico" sizes="96x96" /> -->
-<!-- <link rel="shortcut icon" href="/src/assets/img/favicon.ico" /> -->
-
-<link rel="icon" href="data:;base64,iVBORw0KGgo=">
-
-<!-- <link
-  rel="apple-touch-icon"
-  sizes="180x180"
-  href="/src/assets/img/favicon.png"
-/> -->
-<!-- <meta name="apple-mobile-web-app-title" content="bokumentation" /> -->
-
-<!-- <link rel="manifest" href="/site.webmanifest" /> -->
+<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="astro-erudite" />
+<link rel="manifest" href="/site.webmanifest" />
