--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,24 +3,20 @@ import Link from '@/components/Link.astro'
 import ThemeToggle from '@/components/ThemeToggle.astro'
 import MobileMenu from '@/components/ui/mobile-menu'
 import { NAV_LINKS, SITE } from '@/consts'
+
+
 ---
 
 <header>
   <div
     class="border-b border-accent mx-auto flex max-w-full items-center justify-between gap-4 px-4 py-3"
   >
-    <!-- SITE HEADER LOGO AND NAME  -->
-    <Link href="/" class="flex shrink-0 items-center justify-center gap-3">
-      <!-- Site Logo -->
-      <!-- <Image src={logo} alt="Logo" class="size-5 sm:size-6" /> -->
-      <!-- Title Site -> @/consts -->
-      <span class="text-l hidden h-full min-[300px]:block">{SITE.title}.</span>
+    <Link href="/" class="">
+      <span class="text-l h-full">{SITE.title}.</span>
     </Link>
 
-    <!-- SITE HEADER LINK like Blog or About -->
     <div class="flex items-center sm:gap-4">
       <nav class="hidden items-center gap-4 text-sm sm:flex sm:gap-6">
-        <!-- NAV LINK -> @/consts -->
         {
           NAV_LINKS.map((item) => (
             <Link
@@ -32,7 +28,6 @@ import { NAV_LINKS, SITE } from '@/consts'
           ))
         }
       </nav>
-      <!-- MOBILE MENU SETTINGS -->
       <MobileMenu client:load />
       <ThemeToggle />
     </div>
